k8s/services/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: shopno-apps
  labels:
    app.kubernetes.io/name: metabase
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: metabase
